popup detail hover card overflow block resolved
popup detail hover card overflow block resolved

--- a/static/style.css
+++ b/static/style.css
@@ -304,7 +304,7 @@ body.login {
     width: 300px;
     height: fit-content;
     max-height: calc(100vh - 30px); /* Set maximum height to 90% of the viewport height */
-    overflow-y: auto;
+    /* overflow-y: auto; */
     background: #f1f8fe;
     border-radius: 10px;
     margin: 8px;
@@ -1436,7 +1436,7 @@ body.login {
     border: 1px solid #ccc;
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
+    z-index: 99999;
     width: fit-content;
     padding: 6px 12px;
     border-radius: 5px;
